added submit button to dropdown

--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,10 @@
 			<li role="presentation" class="divider"></li>
 			<li role="presentation"><a role="menuitem" tabindex="-1" href="#">All Majors</a></li>    
 			</ul>
+			<button type="button" id="submit-btn" class="btn btn-default">Go!</button>
 		</div>
+		
+		
 
 		<div id="ex0"></div>
 	</div>
