--- a/public/index.html
+++ b/public/index.html
@@ -33,29 +33,20 @@
 	<hr>
 	<!-- MAIN GRAPH -->
 	<div id="graphbody">
-		<div id ="graph">
-			<div id="dropdown">
-				<button class="btn btn-primary dropdown-toggle" id="major" type="button" data-toggle="dropdown">Select Major
-				<span class="caret"></span></button>
-				<ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
-				<li role="presentation"><a role="menuitem" tabindex="-1" href="#">Major 1</a></li>
-				<li role="presentation"><a role="menuitem" tabindex="-1" href="#">Major 2</a></li>
-				<li role="presentation"><a role="menuitem" tabindex="-1" href="#">Major 3</a></li>
-				<li role="presentation" class="divider"></li>
-				<li role="presentation"><a role="menuitem" tabindex="-1" href="#">All Majors</a></li>    
-				</ul>
-				<button type="button" id="submit-btn" class="btn btn-default">Go!</button>
-			</div>
-			<div id="ex0"></div>
+		
+		<div class="dropdown">
+			<button class="btn btn-primary dropdown-toggle" id="major" type="button" data-toggle="dropdown">Select Major
+			<span class="caret"></span></button>
+			<ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
+			<li role="presentation"><a role="menuitem" tabindex="-1" href="#">Major 1</a></li>
+			<li role="presentation"><a role="menuitem" tabindex="-1" href="#">Major 2</a></li>
+			<li role="presentation"><a role="menuitem" tabindex="-1" href="#">Major 3</a></li>
+			<li role="presentation" class="divider"></li>
+			<li role="presentation"><a role="menuitem" tabindex="-1" href="#">All Majors</a></li>    
+			</ul>
 		</div>
-		<div id ="text">
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur sem justo, ultrices nec vulputate tempus,
-			rhoncus et metus. Aenean aliquam auctor lacus, id lacinia eros. Duis vel ultricies felis. Aliquam nec mi ligula.
-			Proin libero nisl, iaculis in volutpat ac, dapibus a quam. Curabitur luctus, odio porttitor luctus hendrerit, urna lacus posuere enim,
-			id lacinia diam felis egestas dolor. Phasellus tempus a nulla vel ultricies. Duis eget neque ac lorem finibus bibendum. Nam auctor velit
-			id tortor lacinia, eu accumsan magna mollis. Sed vehicula dui mi, sit amet tempus quam ornare ut. Donec non porta augue. Maecenas 
-			sollicitudin elit non tempor pretium.</p>
-		</div>
+
+		<div id="ex0"></div>
 	</div>
 	<!-- END MAIN GRAPH -->
 	<hr>
