switched back to left-justified dropdown, fixed divs in dropdown area

--- a/public/index.html
+++ b/public/index.html
@@ -34,17 +34,19 @@
 	<!-- MAIN GRAPH -->
 	<div id="graphbody">
 		<div id ="graph">
-			<div id="dropdown">
-				<button class="btn btn-primary dropdown-toggle" id="major" type="button" data-toggle="dropdown">Select Major
-				<span class="caret"></span></button>
-				<ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
-				<li role="presentation"><a role="menuitem" tabindex="-1" href="#">Major 1</a></li>
-				<li role="presentation"><a role="menuitem" tabindex="-1" href="#">Major 2</a></li>
-				<li role="presentation"><a role="menuitem" tabindex="-1" href="#">Major 3</a></li>
-				<li role="presentation" class="divider"></li>
-				<li role="presentation"><a role="menuitem" tabindex="-1" href="#">All Majors</a></li>    
-				</ul>
-				<button type="button" id="submit-btn" class="btn btn-default">Go!</button>
+			<div id ="selection">
+				<div class="dropdown">
+					<button class="btn btn-primary dropdown-toggle" id="major" type="button" data-toggle="dropdown">Select Major
+					<span class="caret"></span></button>
+					<ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
+					<li role="presentation"><a role="menuitem" tabindex="-1" href="#">Major 1</a></li>
+					<li role="presentation"><a role="menuitem" tabindex="-1" href="#">Major 2</a></li>
+					<li role="presentation"><a role="menuitem" tabindex="-1" href="#">Major 3</a></li>
+					<li role="presentation" class="divider"></li>
+					<li role="presentation"><a role="menuitem" tabindex="-1" href="#">All Majors</a></li>    
+					</ul>
+					<button type="button" id="submit-btn" class="btn btn-default">Go!</button>
+				</div>
 			</div>
 			<div id="ex0"></div>
 		</div>
