added the rest of the majors to the drop down menu. Data works for all of the possible majors now

--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,11 @@
 				  <option value="1">Business</option>
 				  <option value="2">History and Humanities</option>
 				  <option value="3">Arts</option>
-				  <option value="audi">Audi</option>
+				  <option value="4">Biology and Chemistry</option>
+				  <option value="5">Engineering and Math</option>
+				  <option value="6">Health Sciences</option>
+				  <option value="7">Behavioral Sciences</option>
+				  <option value="8">Education</option>
 				</select>
 				<button type="button" id="submit-btn" class="btn btn-default">Go!</button>
 				<!-- <div class="dropdown">
