Changed colors to a more grey theme, expanded title image to whole width

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
 		<p>Helping you see what needs to be seen</p>
 	</div>
 	<!-- END BANNER -->
-	<hr>
+
 	<!-- MAIN GRAPH -->
 	<div id="graphbody">
 		<div id ="graph">
@@ -72,9 +72,10 @@
 		</div> -->
 	</div>
 	<!-- END MAIN GRAPH -->
-	<hr>
+	
 	<!-- FOOTER CONTENT -->
   	<div id="footer">
+	<p>Created and Developed by: Tyler Honsinger, Max Oakes, Sean Pierson<br>University of Portland, 2015</p>
 	</div>
 	<!-- END FOOTER CONTENT -->
    
