Bars now change color based on which major is displayed. Backgroud border changes color along with the bars (to match). There is only one fetch for the data now, making one of the goals that we were shooting for met.

--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
 	<!-- END BANNER -->
 
 	<!-- MAIN GRAPH -->
-	<div id="graphbody">
+	<div id="graphbody" class="graphbody">
 		<div id ="graph">
 			<div id ="selection">
 				<select id="major">
@@ -54,7 +54,7 @@
 	
 	<!-- FOOTER CONTENT -->
   	<div id="footer">
-	<p>Created and Developed by: Tyler Honsinger, Max Oakes, Sean Pierson<br>University of Portland, 2015</p>
+	<p>Created and Developed by:<br> Tyler Honsinger, Max Oakes, Sean Pierson<br>University of Portland, 2015</p>
 	</div>
 	<!-- END FOOTER CONTENT -->
    
